<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".presentation.screens.MainFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icPlacePin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="11dp"
                android:src="@drawable/ic_home_place_pin"
                app:layout_constraintBottom_toBottomOf="@+id/tvCity"
                app:layout_constraintEnd_toStartOf="@+id/tvCity"
                app:layout_constraintTop_toTopOf="@+id/tvCity" />

            <TextView
                android:id="@+id/tvCity"
                style="@style/tvMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/tv_city"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/icHomeArrowDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_home_arrow_down"
                app:layout_constraintBottom_toBottomOf="@+id/tvCity"
                app:layout_constraintStart_toEndOf="@id/tvCity"
                app:layout_constraintTop_toTopOf="@+id/tvCity" />

            <ImageView
                android:id="@+id/icHomeFilter"
                android:layout_width="12dp"
                android:layout_height="14dp"
                android:layout_marginEnd="35dp"
                android:src="@drawable/ic_home_filter"
                app:layout_constraintBottom_toBottomOf="@id/tvCity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvCity" />

            <TextView
                android:id="@+id/tvSelectCategory"
                style="@style/tvBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="18dp"
                android:text="@string/select_category"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCity" />

            <TextView
                android:id="@+id/tvViewAll"
                style="@style/tvRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="33dp"
                android:text="@string/view_all"
                android:textColor="@color/primary"
                app:layout_constraintBottom_toBottomOf="@+id/tvSelectCategory"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvSelectCategory" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabSelectCategory"
                android:layout_width="0dp"
                android:layout_height="93dp"
                android:layout_marginTop="24dp"
                android:background="@color/background_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSelectCategory"
                app:tabIndicator="@null"
                app:tabMode="scrollable">

            </com.google.android.material.tabs.TabLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/searchView"
                android:layout_width="300dp"
                android:layout_height="34dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="18dp"
                android:hint="Search"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxStrokeWidth="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tabSelectCategory"
                app:startIconDrawable="@drawable/ic_magnifier"
                app:startIconTint="@color/primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="@style/hintTextAppearance" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/qrButton"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginStart="11dp"
                android:background="@drawable/ic_circle_primary"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                app:icon="@drawable/ic_qr"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:layout_constraintBottom_toBottomOf="@id/searchView"
                app:layout_constraintStart_toEndOf="@id/searchView"
                app:layout_constraintTop_toTopOf="@id/searchView" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/mainScreenCategoriesContentViewPager"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="74dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/searchView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavBar"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:background="@drawable/bottom_nav_background"
        app:itemIconTint="@drawable/bottom_navigation_color_selector"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/menu_bottom_nav" />

    <include
        android:id="@+id/filterOptionsCard"
        layout="@layout/filter_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>